Add Skeleton favicon because why not

--- a/content/helloworld.html
+++ b/content/helloworld.html
@@ -8,10 +8,10 @@
 
     <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-    <link rel="stylesheet" href="skeleton/normalize.css">
-    <link rel="stylesheet" href="skeleton/skeleton.css">
+    <link rel="stylesheet" href="skeleton/css/normalize.css">
+    <link rel="stylesheet" href="skeleton/css/skeleton.css">
 
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="skeleton/images/favicon.png">
 
     <script src="http://fb.me/react-0.12.2.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>
